--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2009,8 +2009,8 @@ input, select, textarea {
 		}
 
 		.wrapper.style4 {
-			background-color: #303030;
-			color: #999;
+			background-color: #ffffff;
+			color: #000000; 
 			text-shadow: -1px -1px 0px #181818;
 		}
 
