--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2010,7 +2010,7 @@ input, select, textarea {
 
 		.wrapper.style4 {
 			background-color: #ffffff;
-			color: #000000; 
+			color: #fff; 
 			text-shadow: -1px -1px 0px #181818;
 		}
 
